Git Master
------------------------------------------------------------------------------------------------------------------------

ENGINE:
	- Fixed: Error on backup: Unable to change mode for...

GUI:
	- Fixed: Unable to add hosting plan (reseller level)
	- Fixed: Possible missing properties (hosting_plans)

SETUP:
	- Fixed: Pressed feature is broken

Tickets:
	- Fixed #776: Bug - Hosting plans attribs aren't updated with the migration
	- Fixed #777: Bug - Autoinstaller - Two entries for imscp-autoinstall option -h
	- Fixed #778: Bug - Autoinstaller - Exit code 5 in non-interactive mode --nopromt
	- Fixed #781: Bug - Network card not found

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.2
------------------------------------------------------------------------------------------------------------------------

2013-06-04: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc2.2

GUI:
	- Fixed: Custom DNS feature not working due to missing files

VENDOR:
	- Updated jQuery to v1.10.1
	- Updated jQuery UI to v1.10.3

Tickets:
	Fixed #640: Bug - AliasSubdomain won't work when Alias is a redirect
	Fixed #767: Update -jQuery 1.10.1 released
	Fixed #769: Review - Language issue in imscp GUI

------------------------------------------------------------------------------------------------------------------------
i-MSCP 1.1.0-rc2.1
------------------------------------------------------------------------------------------------------------------------

2013-06-02: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc2.1

CONFIGS:
	- Added MariaDb support
	- Added named.conf.local and named.conf.options files
	- Added skel directory for Web folder skeletons (Httpd server impls.)
	- Fixed: Useless section must be removed in generated Apache configuration files
	- Fixed: diff package isn't available for Ubuntu > 12.04 (replaced by diffutils)
	- Removed packages file for Ubuntu Oneiric Ocelot (EOL 20130509)